improved markdown formatting

--- a/eeg/eeg_preprocessing_workflow.Rmd
+++ b/eeg/eeg_preprocessing_workflow.Rmd
@@ -19,8 +19,6 @@ knitr::opts_chunk$set(echo = TRUE)
 
 
 #remotes::install_github("craddm/eegUtils")
-
-
 require(JADE) #ICA
 require(e1071) #kurtosis
 
@@ -38,31 +36,49 @@ require(geometry)
 theme_set(theme_bw())
 ```
 
-# EEG preprocessing pipeline
-
 takes EEG data in CSV format that has been collected with BrainProduct 32-channel R-net caps.
 Raw data has been recorded with Lab Streaming Layer and combined with triggers from Psychopy.
 See: convert_xdf_to_csv.py
 
-## define cutoffs and settings
+Preprocessing includes:
+- eeg data loading
+- inspect channels
+- bandpass filtering
+- identify bad channels (noisy, flat, low intercorrelation)
+- spatial interpolation with inverse distance weighting
+- common average reference
+- Independent Component Analysis (ICA) - with PCA and JADE algorithm
+- baseline correction
+- results visualization
+
+# setup
+
+## cutoff definition
 
 ```{r magic numbers}
 
-#cutoffs
+#EEG sampling rate - not tested for others than 1000Hz
+sampling_rate <- 1000
+
+#bad channel cutoffs
 flat_channel_variance_cutoff<-1 #1 microvolt
 noisy_channel_cutoff<-100 #100 microvolt
-sampling_rate <- 1000
+correlation_cutoff<-0.4
+
+#epoching
+epoch_min <- -0.2
+epoch_max <- 1.8
 
 ```
 
-## define EEG
+## EEG data structure
 
-- recorded Leni with Tobii TX300 and R-Net Caps. Raw data has already been combined with EEG triggers:
-see merge_eeg_with_triggers_from_csv.r.
-- electrode position information is converted to catesian coordinates and plotted for visual inspection
+- recorded test subject (LENI) with Tobii TX300 and R-Net Caps.
+- 32 channels with 3 movement axis (Liveamp movement)
+- Raw data has already been combined with EEG triggers: see merge_eeg_with_triggers_from_csv.r.
+- electrode position information is converted to cartesian coordinates and plotted for visual inspection
 
-
-```{r load EEG, echo=FALSE}
+```{r define EEG and path}
 
 file_path<-"C:/Users/nico/PowerFolders/project_locusmental_wp1/data/testdata_battery_eeg_Leni13082025/eeg/eeg_with_triggers.csv"
 
@@ -118,27 +134,58 @@ cart_coordinates<-data.frame(electrode=channel_labels,cart_coordinates)
 
 ```
 
-## Load functions
+# Preprocessing 
 
-- eeg data loading
-- inspect channels
-- bandpass filtering
-- identify bad channels (noisy, flat, low intercorrelation)
-- spatial interpolation with inverse distance weighting
-- common average reference
-- Independent Component Analysis (ICA) - with PCA and JADE algorithm
-- baseline correction
-- results visualization
+- full preprocessing into epoched data
 
+## load and select task data
 
-```{r load functions}
+- loads data, defines channel names and provides available variables
+- selects according task data
+- plot shows EEG trigger distribution along the recording
 
-## LOAD FUNCTIONS ####
+```{r load data and inspect trigger}
 
 # Function to load EEG data from CSV
 load_eeg_data <- function(file_path) {
   data <- read.csv(file_path,header=T,sep=',')
   return(data)
+}
+
+#load data
+raw_data <- load_eeg_data(file_path) #load data
+names(raw_data)[eeg_channel_range]<-channel_labels #apply channel labels
+names(raw_data) #variables in data set
+
+#identify correct task to preprocess
+start_task<-min((1:nrow(raw_data))[raw_data$trigger_trial=='baseline'])
+end_task<-max((1:nrow(raw_data))[raw_data$trigger_trial=='auditory oddball'])
+raw_data<-raw_data[start_task:end_task,]
+
+#show trigger distribution
+eeg_data<-raw_data[,eeg_channel_range] #extract channels
+ggplot(raw_data,aes(x=1:nrow(eeg_data),fill=trigger_trial))+
+  geom_histogram(bins=100)+ 
+  labs(title='EEG trigger distribution')+xlab('EEG recoding samples (time axis)')
+# samples / sampling_rate = time in seconds
+
+```
+
+## bandpass filtering
+
+- bandpass default: 1-40Hz (butterworth filter)
+- also visual inspection of filtered channel by correlation plots
+
+```{r bandpass filtering}
+
+# Function to apply bandpass filter, 1-40Hz, 1000Hz sampling rate
+bandpass_filter <- function(data, low_freq = 1, high_freq = 40, srate = sampling_rate) {
+  nyquist <- srate / 2
+  bf <- butter(4, c(low_freq / nyquist, high_freq / nyquist), type = "pass")
+  filtered_data <- as.data.frame(lapply(data, function(channel) {
+    filtfilt(bf, channel)
+  }))
+  return(filtered_data)
 }
 
 #inspect channels
@@ -157,20 +204,26 @@ inspect_channels<-function(data){
       ymin = median - 3*sd, 
       ymax = median + 3*sd),
       stat = "identity")+
-    labs(y='median voltage')
+    labs(y='median voltage')+xlab('electrode channel')
 
 }
 
 
-# Function to apply bandpass filter, 1-40Hz, 1000Hz sampling rate
-bandpass_filter <- function(data, low_freq = 1, high_freq = 40, srate = sampling_rate) {
-  nyquist <- srate / 2
-  bf <- butter(4, c(low_freq / nyquist, high_freq / nyquist), type = "pass")
-  filtered_data <- as.data.frame(lapply(data, function(channel) {
-    filtfilt(bf, channel)
-  }))
-  return(filtered_data)
-}
+#band-pass filtering - important for other steps to work efficiently
+filtered_data <- bandpass_filter(eeg_data)
+
+#visual inspection of channels
+inspect_channels(filtered_data)
+#correlation ordered by first principal component (clustered correlation patterns)
+corrplot::corrplot(cor(filtered_data),type='upper',order='FPC',title='EEG channel correlations clustered')
+
+```
+
+## bad channel identification
+
+- flat (SD<1), noisy (SD>100), and low correlation (r<.4) channels
+
+```{r bad channels}
 
 # identify noisy and flat channels
 identify_flat_channels<-function(data,flat_cutoff){
@@ -193,11 +246,27 @@ channel_correlation<-function(data){
   names(mean_intercorrelations)<-colnames(cor_table)
   plot(mean_intercorrelations)
   text(mean_intercorrelations,names(mean_intercorrelations),pos=3,col='red')
-  low_intercorrelations<-names(mean_intercorrelations)[mean_intercorrelations<0.4]
+  low_intercorrelations<-names(mean_intercorrelations)[mean_intercorrelations<correlation_cutoff]
   return(low_intercorrelations)
   
 }
 
+#bad channel identification by algorithm
+lowcor_channels<-channel_correlation(filtered_data)
+flat_channels<-identify_flat_channels(filtered_data,flat_channel_variance_cutoff)
+noisy_channels<-identify_noisy_channels(filtered_data,noisy_channel_cutoff)
+bad_channels<-unique(c(lowcor_channels,flat_channels,noisy_channels))
+
+paste('Identified as bad channel:',bad_channels)
+
+```
+
+## spatial interpolation
+
+- inverse distance weighting
+- requires electrode coordinates in cartesian space & bad channels
+
+```{r spatial interpolation}
 
 #spatial interpolation - with inverse distance weighting
   spatial_interpolate <- function(eeg_data, bad_channels, coords) {
@@ -227,8 +296,22 @@ channel_correlation<-function(data){
     
     return(eeg_data)
   }
-  
-  
+
+
+#spatial interpolation of bad channels - with inverse distance weighting, requires electrode coordinates
+filtered_data<-spatial_interpolate(filtered_data,bad_channels,cart_coordinates)
+corrplot::corrplot(cor(filtered_data),type='upper',order='FPC',
+                   title='clustered EEG channel correlation - after spatial interpolation') #check effect of spatial interpolation
+
+```
+
+## rereferincing
+
+- common average reference
+- compare mean amplitude before and after re-referencing
+
+```{r rereferencing}
+
 # Function to apply Common Average Reference
 apply_car <- function(eeg_data) {
   # Compute the average across all channels for each time point
@@ -240,6 +323,24 @@ apply_car <- function(eeg_data) {
   return(eeg_car)
 }
 
+
+#referencing - with common average referencing per timepoint
+print('before')
+round(apply(filtered_data,2,median),2) #mean amplitude BEFORE rereferenceing
+filtered_data<-apply_car(filtered_data)
+print('after')
+round(apply(filtered_data,2,median),2) #mean amplitude AFTER rereferenceing
+
+
+```
+
+## ICA - artifact removal
+
+- ICA 
+- visual inspection of 5 first major components of ICA
+- automated component removal with kurtosis of components
+
+```{r ICA}
 
 # Function to perform ICA for artifact removal - based on eegUtils package
 perform_ica <- function(data) {
@@ -263,12 +364,6 @@ perform_ica <- function(data) {
   return(list(components,mixing_matrix,pca_result,nonzero_var,eeg_centered_data))
  
 } 
-
-# Function to select specific channels
-select_channels <- function(data, channels) {
-  selected_data <- data[, channels]
-  return(selected_data)
-}
 
 # Function to visualize EEG signals
 plot_preprocessed_segments<-function(eeg_data){
@@ -301,9 +396,51 @@ plot_preprocessed_segments<-function(eeg_data){
   SIMPLIFY = FALSE)
   
   # Arrange them in a grid
+  print('plotting 10 random seconds of 10 random channels')
   do.call(grid.arrange, plot_list)
   
 }
+
+#Artifact-Removal - ICA --> TAKES SOME TIME
+## 0. perform ICA
+ica_result <- perform_ica(filtered_data)
+#retrieve data from output list element
+components<-ica_result[[1]]
+mixing_matrix<-ica_result[[2]]
+pca_result<-ica_result[[3]]
+nonzero_var<-ica_result[[4]]
+eeg_centered_data<-ica_result[[5]]
+
+##1. visual inspection of components
+number_of_components<-5
+for (i in 1:number_of_components){
+  plot(components[, i], type = "l", main = paste("Component",i))
+}
+##2. automated inspection of components by  kurtosis
+IC_kurtosis<-round(apply(components, 2, function(x){kurtosis(x)}),2)
+high_kurtosis<-IC_kurtosis>100
+##3. remove components (automatically based on kurtosis or visual inspection)
+components_clean <- components
+exclude_components<-3
+components_clean[, c(1, exclude_components)] <- 0  # Replace with components you want to remove - automate by replacing with "high_kurtosis"
+##4.reconstruct cleaned EEG
+eeg_pca_clean <- components_clean %*% t(mixing_matrix) #Back to PCA space
+eeg_clean <- eeg_pca_clean %*% t(pca_result$rotation[, nonzero_var]) # Back to original channel space
+eeg_clean <- sweep(eeg_clean, 2, attr(eeg_centered_data, "scaled:center"), "+") #uncenter
+eeg_clean<-data.frame(eeg_clean)
+
+#inspect preprocessed data
+corrplot::corrplot(cor(eeg_clean),type='upper',order='FPC',title='cleaned EEG channel correlations') #correlation ordered by first principal component (clustered correlation patterns)
+inspect_channels(eeg_clean)
+plot_preprocessed_segments(eeg_clean)
+
+```
+
+## epoching 
+
+- epoch = -200ms to 1800ms
+
+```{r epoch data}
 
 #epoch function
 epoch_eeg <- function(eeg_data, data_with_trigger_info,
@@ -362,6 +499,22 @@ epoch_eeg <- function(eeg_data, data_with_trigger_info,
   return(out)
 }
 
+
+#epoch data
+eeg_epochs<-epoch_eeg(eeg_clean, 
+                      data_with_trigger_info=raw_data[,-eeg_channel_range],
+                      sampling_rate,
+                      tmin=epoch_min,tmax=epoch_max)
+
+
+```
+
+## baseline correction
+
+- corrected for mean of pre-stimulus phase in epoch (-200 to 0 ms)
+
+```{r baseline correction}
+
 #baseline correction
 baseline_correct <- function(epoch_obj, baseline = c(-0.2, 0)) {
   # epoch_obj: output from epoch_eeg()
@@ -387,155 +540,16 @@ baseline_correct <- function(epoch_obj, baseline = c(-0.2, 0)) {
 }
 
 
-```
-
-## apply preprocessing pipeline to test data
-
-full preprocessing into epoched data
-
-### load and select task data
-
-loads data and selects according task data
-
-```{r apply preprocessing}
-
-#load data
-raw_data <- load_eeg_data(file_path) #load data
-names(raw_data)[eeg_channel_range]<-channel_labels #apply channel labels
-
-#identify correct task to preprocess
-start_task<-min((1:nrow(raw_data))[raw_data$trigger_trial=='baseline'])
-end_task<-max((1:nrow(raw_data))[raw_data$trigger_trial=='auditory oddball'])
-raw_data<-raw_data[start_task:end_task,]
-
-eeg_data<-raw_data[,eeg_channel_range] #extract channels
-ggplot(raw_data,aes(x=1:nrow(eeg_data),fill=trigger_trial))+geom_histogram(bins=100) #show trigger distribution
-
-```
-
-### bandpass filtering
-
-also visual inspection of filtered channel by correlation plots
-
-```{r bandpass filtering}
-#band-pass filtering - important for other steps to work efficiently
-filtered_data <- bandpass_filter(eeg_data)
-
-#visual inspection of channels
-inspect_channels(filtered_data)
-corrplot::corrplot(cor(filtered_data),type='upper',order='FPC') #correlation ordered by first principal component (clustered correlation patterns)
-
-```
-
-### bad channel identification
-
-flat, noisy, and low cor channels
-
-```{r bad channels}
-
-#bad channel identification by algorithm
-lowcor_channels<-channel_correlation(filtered_data)
-flat_channels<-identify_flat_channels(filtered_data,flat_channel_variance_cutoff)
-noisy_channels<-identify_noisy_channels(filtered_data,noisy_channel_cutoff)
-bad_channels<-unique(c(lowcor_channels,flat_channels,noisy_channels))
-bad_channels
-
-```
-
-### spatial interpolation
-
-with inverse distance weighting
-
-```{r spatial interpolation}
-
-#spatial interpolation of bad channels - with inverse distance weighting, requires electrode coordinates
-filtered_data<-spatial_interpolate(filtered_data,bad_channels,cart_coordinates)
-corrplot::corrplot(cor(filtered_data),type='upper',order='FPC') #check effect of spatial interpolation
-
-```
-
-### rereferincing
-
-to common average reference
-
-```{r rereferencing}
-
-#referencing - with common average referencing per timepoint
-apply(filtered_data,2,median) #mean amplitude BEFORE rereferenceing
-filtered_data<-apply_car(filtered_data)
-apply(filtered_data,2,median) #mean amplitude AFTER rereferenceing
-
-
-```
-
-##ä ICA - artifact removal
-
-- ICA 
-- visual inspection
-- automated component removal with kurtosis of components
-
-```{r ICA}
-
-#Artifact-Removal - ICA --> TAKES SOME TIME
-## 0. perform ICA
-ica_result <- perform_ica(filtered_data)
-components<-ica_result[[1]]
-mixing_matrix<-ica_result[[2]]
-pca_result<-ica_result[[3]]
-nonzero_var<-ica_result[[4]]
-eeg_centered_data<-ica_result[[5]]
-
-##1. visual inspection of components
-number_of_components<-5
-for (i in 1:number_of_components){
-  plot(components[, i], type = "l", main = paste("Component",i))
-}
-##2. automated inspection of components by  kurtosis
-IC_kurtosis<-round(apply(components, 2, function(x){kurtosis(x)}),2)
-high_kurtosis<-IC_kurtosis>100
-##3. remove components (automatically based on kurtosis or visual inspection)
-components_clean <- components
-exclude_components<-3
-components_clean[, c(1, exclude_components)] <- 0  # Replace with components you want to remove - automate by replacing with "high_kurtosis"
-##4.reconstruct cleaned EEG
-eeg_pca_clean <- components_clean %*% t(mixing_matrix) #Back to PCA space
-eeg_clean <- eeg_pca_clean %*% t(pca_result$rotation[, nonzero_var]) # Back to original channel space
-eeg_clean <- sweep(eeg_clean, 2, attr(eeg_centered_data, "scaled:center"), "+") #uncenter
-eeg_clean<-data.frame(eeg_clean)
-
-#inspect preprocessed data
-corrplot::corrplot(cor(eeg_clean),type='upper',order='FPC') #correlation ordered by first principal component (clustered correlation patterns)
-inspect_channels(eeg_clean)
-plot_preprocessed_segments(eeg_clean)
-
-```
-
-##ä epoch data
-
-```{r epoch data}
-
-#epoch data
-eeg_epochs<-epoch_eeg(eeg_clean, 
-                      data_with_trigger_info=raw_data[,-eeg_channel_range],
-                      sampling_rate,
-                      tmin=-0.2,tmax=1.8)
-
-
-```
-
-### baseline correction
-
-```{r baseline correction}
-
 #baseline correction
 eeg_epochs<-baseline_correct(eeg_epochs)
 
 ```
 
+# preprocessed data inspection
 
-## preprocessed data inspection
+- looks into Fz electrode for P300 signal
 
-```{r preprocessed data inspection}
+```{r preprocessed data inspection, warnings=FALSE}
 
 #inspect data
 #extract 
